1) подпись кнопки добавления документов в проекте 2) отображение стадий в моих работах Список задач #16

--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -12,7 +12,7 @@
         <li>
             <div class="ajaxToggleBtn iconed-title" data-ajax-update="#addArea" data-href="/Documents/CreateProjectDoc/@Model.Id">
                 <i class="material-icons">add_circle</i>
-                <span> Документы</span>
+                <span>Добавить документы</span>
             </div>
         </li>
         @{
