--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -1,8 +1,9 @@
 ﻿@model List<TranslationRegistryModel.User_Stage>
 <div class="tableMaterial">
     <div class="titles">
-        <div class="col-md-2">Проект</div>
+        <div class="col-md-1">Проект</div>
         <div class="col-md-2">Документ</div>
+        <div class="col-md-1">Стадия</div>
         <div class="col-md-1">Исходник</div>
         <div class="col-md-3">Комментарий</div>
         <div class="col-md-1">Объем</div>
