#12 Добавлены единицы измерения в некоторых местах todo: в модальных окнах

--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -145,7 +145,7 @@
                                                     </span>
                                                 </div>
                                                 <div class="col-md-5">Комментарий</div>
-                                                <div class="col-md-2">Количество</div>
+                                                <div class="col-md-2">Количество (@currentWorkType.UnitOfMeasure.Name)</div>
                                                 <div class="col-md-2">Комманды</div>
                                             </div>
                                         </div>
