--- a/TranslationReg/Views/Analytics/Report.cshtml
+++ b/TranslationReg/Views/Analytics/Report.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-md-4">
                     <span>
-                        @userWorks.Count
+                        @userWorks.Count (@userWorks.UnitOfMeasure)
                     </span>
                 </div>
             </div>
