--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -12,50 +12,51 @@
 
     @foreach (var project in Model)
     {
-        <div class="properties">
+    <div class="properties">
+        <div onclick="window.location.href='/Projects/Project/@(project.Id)';"  class="click-catcher"> </div>
+        <div class="col-md-3">
 
-            <div class="col-md-3">
-                <a class="titleLink" href="/Projects/Project/@(project.Id)">@project.Name</a>
-                <!--
-                    <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
-                -->
-            </div>
-
-            <div class="col-md-2">
-                <span>
-                    @Html.DisplayFor(modelItem => project.Customer)
-                </span>
-            </div>
-            <div class="col-md-2">
-                <span>
-                    @Html.DisplayFor(modelItem => project.ProjectStatus.Name)
-                </span>
-            </div>
-            <div class="col-md-1">
-                <span>
-                    @Html.DisplayFor(modelItem => project.LanguagePair.Name)
-                </span>
-            </div>
-            <div class="col-md-2">
-                <span>
-                    @if (project.Deadline.HasValue)
-                    {
-                        @project.Deadline.Value.ToString("dd/MM/yyyy")
-                    }
-                </span>
-            </div>
-            <div class="col-md-2">
-                <div class="icons-container">
-                    <a data-href="/Projects/EditModal/@project.Id" class="loadModal">
-                        <i class="material-icons">mode_edit</i>
-                    </a>
-                    <a data-href="/Projects/Delete/@project.Id" class="loadModal" data-dialog-title="Удаление проекта и содержимого">
-                        <i class="material-icons">delete</i>
-                    </a>
-                </div>
-            </div>
-            <div id="@(project.Id)" class="dynamicBlock dynamicBlock-prop"></div>
+            <a class="titleLink" href="/Projects/Project/@(project.Id)">@project.Name</a>
+            <!--
+            <a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a>
+        -->
         </div>
+
+        <div class="col-md-2">
+            <span>
+                @Html.DisplayFor(modelItem => project.Customer)
+            </span>
+        </div>
+        <div class="col-md-2">
+            <span>
+                @Html.DisplayFor(modelItem => project.ProjectStatus.Name)
+            </span>
+        </div>
+        <div class="col-md-1">
+            <span>
+                @Html.DisplayFor(modelItem => project.LanguagePair.Name)
+            </span>
+        </div>
+        <div class="col-md-2">
+            <span>
+                @if (project.Deadline.HasValue)
+            {
+                @project.Deadline.Value.ToString("dd/MM/yyyy")
+        }
+            </span>
+        </div>
+        <div class="col-md-2">
+            <div class="icons-container">
+                <a data-href="/Projects/EditModal/@project.Id" class="loadModal">
+                    <i class="material-icons">mode_edit</i>
+                </a>
+                <a data-href="/Projects/Delete/@project.Id" class="loadModal" data-dialog-title="Удаление проекта и содержимого">
+                    <i class="material-icons">delete</i>
+                </a>
+            </div>
+        </div>
+        <div id="@(project.Id)" class="dynamicBlock dynamicBlock-prop"></div>
+    </div>
 
     }
 </div>
